@@ -2778,115 +2778,6 @@ the ``consumer.py`` program like this::
 This code doesn't involve Curio in any way.  However, it speaks the
 same messaging protocol.  So, it should work just fine.
 
-Spawning Tasks in a Subprocess
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-
-As final option, Curio provides a mechanism for spawning tasks in a 
-subprocess.   To do this, use the aptly name ``aside()`` function. For
-example::
-
-    from curio import Channel, run, aside
-
-    async def producer(ch):
-        c = await ch.accept(authkey=b'peekaboo')
-        for i in range(10):
-            await c.send(i)
-
-    async def consumer(ch):
-        c = await ch.connect(authkey=b'peekaboo')
-        while True:
-            msg = await c.recv()
-            print('Got:', msg)
-
-    async def main():
-        ch = Channel(('localhost', 30000))
-        cons = await aside(consumer, ch)    # Launch consumer in separate process
-        await producer(ch)
-        await cons.cancel()                 # Cancel consumer process
-
-    if __name__ == '__main__':
-        run(main)
-
-``aside()`` does nothing more than launch a new Python subprocess and
-invoke ``curio.run()`` on the suppplied coroutine.  Any additional
-arguments supplied to ``aside()`` are given as arguments to the
-coroutine.
-
-``aside()`` does not involve a pipe or a process fork.  The newly
-created process shares no state with the caller.  There is no I/O
-channel between processes.  There is no shared signal handling.  If
-you want I/O, you should create a ``Channel`` object and pass it as an
-argument as shown (or use some other communication mechanism such as
-sockets).
-
-A notable thing about ``aside()`` is that it still creates a proper
-``Task`` in the caller.  You can join with that task or cancel it.  It
-will be cancelled on kernel shutdown if you make it daemonic.  If you
-cancel the task, a ``TaskCancelled`` exception is propagated to the
-subprocess (e.g., the ``consumer()`` coroutine above gets a proper
-cancellation exception when the ``main()`` coroutine invokes
-``cons.cancel()``).
-
-Tasks launched using ``aside()`` do not return a normal result.  As
-noted, ``aside()`` does not create a pipe or any kind of I/O channel
-for communicating a result.  If you need a result, it should be
-communicated via a channel.  Should you call ``join()``, the return
-value is the exit code of the subprocess.  Normally it is 0.  A
-non-zero exit code indicates an error of some kind.
-
-``aside()`` can be particularly useful if you want to programs that
-perform sharding or other kinds of distributed computing tricks. For
-example, here is an example of a sharded echo server::
-
-    from curio import *
-    import signal
-    import os
-
-    async def echo_client(sock, address):
-        print(os.getpid(), 'Connection from', address)
-        async with sock:
-            try:
-                while True:
-                    data = await sock.recv(100000)
-                    if not data:
-                        break
-                    await sock.sendall(data)
-            except CancelledError:
-                await sock.sendall(b'Server is going away\n')
-                raise
-
-    async def main(nservers):
-        goodbye = SignalEvent(signal.SIGTERM, signal.SIGINT)
-        for n in range(nservers):
-            await aside(tcp_server, '', 25000, echo_client, reuse_port=True)
-        await goodbye.wait()
-        print("Goodbye cruel world!")
-        raise SystemExit(0)
-
-    if __name__ == '__main__':
-        run(main(10))
-
-In this code, ``aside()`` is used to spin up 10 separate processes,
-each of which is running the Curio ``tcp_server()`` coroutine.  The
-``reuse_port`` option is used to make them all bind to the same port.
-The the main program then waits for a termination signal to arrive,
-followed by a request to exit. That's it--you now have ten running Python
-processes in parallel.  On exit, every task in every process will be
-properly cancelled and each connected client will get the "Server is
-going away" message.   It's magic.
-
-Let's step aside for a moment and talk a bit more about some of this
-magic.  When working with subprocesses, it is common to spend a lot of
-time worrying about things like shutdown, signal handling, and other
-horrors.  Yes, those things are an issue, but if you use ``aside()``
-to launch tasks, you should just manage those tasks in the usual Curio
-way.  For example, if you want to explicitly cancel one of them, use
-its ``cancel()`` method.  Or if you want to quit altogether, raise
-``SystemExit`` as shown.  Internally, Curio is tracking the
-associated subprocesses and will manage their lifetime appropriately.
-As long as you let Curio do its thing and you shut things down
-cleanly, it should all work.
-
 Working with Files
 ------------------
 
